--- a/.config
+++ b/.config
@@ -290,8 +290,8 @@ CONFIG_COLLECT_KERNEL_DEBUG=y
 #
 # Kernel build options
 #
-CONFIG_KERNEL_BUILD_USER="builder"
-CONFIG_KERNEL_BUILD_DOMAIN="buildhost"
+CONFIG_KERNEL_BUILD_USER="user"
+CONFIG_KERNEL_BUILD_DOMAIN="openwrt"
 CONFIG_KERNEL_PRINTK=y
 CONFIG_KERNEL_CRASHLOG=y
 CONFIG_KERNEL_SWAP=y
@@ -531,7 +531,7 @@ CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="OpenWrt"
 CONFIG_VERSION_NUMBER=""
 CONFIG_VERSION_CODE=""
-CONFIG_VERSION_REPO="https://downloads.openwrt.org/releases/21.02.0"
+CONFIG_VERSION_REPO="https://downloads.openwrt.org/snapshots"
 CONFIG_VERSION_HOME_URL=""
 CONFIG_VERSION_MANUFACTURER=""
 CONFIG_VERSION_MANUFACTURER_URL=""
